--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1009,7 +1009,7 @@ main {
 .project-img {
   position: relative;
   width: 100%;
-  height: 200px;
+  aspect-ratio: 16 / 9; /* Set aspect ratio to 9:16 */
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: 15px;
@@ -1027,7 +1027,9 @@ main {
   transition: var(--transition-1);
 }
 
-.project-item:hover .project-img::before { background: hsla(0, 0%, 0%, 0.5); }
+.project-item:hover .project-img::before {
+  background: hsla(0, 0%, 0%, 0.5);
+}
 
 .project-item-icon-box {
   --scale: 0.8;
